# spatialite_demo

./: CMakeLists.txt  test.md
